--- a/lessons/14_Flash/templates/users/index.html
+++ b/lessons/14_Flash/templates/users/index.html
@@ -12,7 +12,8 @@
 <br>
 <ul>
     {% for user in users %}
-    <li>{{ user['name'] }}</li>
+    <li><a href="{{ url_for('get_user', id_=user.id) }}">{{ user['name'] }}</a></li>
     {% endfor %}
 </ul>
 
+<a href="{{ url_for('users_new')}}">Добавить пользователя</a>
