--- a/lessons/14_Flash/templates/users/new.html
+++ b/lessons/14_Flash/templates/users/new.html
@@ -19,5 +19,5 @@
       <div>{{ errors['email'] }}</div>
     {% endif %}
   </div>
-   <input type="submit" value="Sign Up">
+   <input type="submit" value="submit">
 </form>
